# FRU-bot

./: README.md  ROBOT_INSTALLATION.md  install_FRU_bot.bash  install_linorobot2.bash
FRU_bot/: CMakeLists.txt  package.xml
FRU_bot_base/: CMakeLists.txt  package.xml
FRU_bot_base/config/: ekf_a2.yaml
FRU_bot_bringup/: CMakeLists.txt  package.xml
FRU_bot_bringup/launch/: bringup_a0.launch.py  bringup_a1.launch.py  bringup_default.launch.py
FRU_bot_description/: CMakeLists.txt  package.xml
FRU_bot_description/launch/: description.launch.py
FRU_bot_description/urdf/controllers/: diff_drive.urdf.xacro
FRU_bot_description/urdf/robots/: 2wd.urdf.xacro  2wd_lino.urdf.xacro  agent0.urdf.xacro  agent2.urdf.xacro
FRU_bot_description/urdf/sensors/: generic_laser.urdf.xacro  imu.urdf.xacro
FRU_bot_gazebo/: CMakeLists.txt  package.xml
FRU_bot_gazebo/launch/: gazebo_a0.launch.py  gazebo_default.launch.py
FRU_bot_navigation/: CMakeLists.txt  package.xml
fru_bot/: CMakeLists.txt  package.xml
fru_bot_base/: CMakeLists.txt  package.xml
fru_bot_base/config/: ekf_default.yaml
fru_bot_bringup/: CMakeLists.txt  package.xml
fru_bot_bringup/launch/: bringup.launch.py  bringup_default.launch.py
fru_bot_description/: CMakeLists.txt  package.xml
fru_bot_description/launch/: description.launch.py
fru_bot_description/rviz/: description.rviz
fru_bot_description/urdf/: 2wd_properties.urdf.xacro
fru_bot_description/urdf/controllers/: diff_drive.urdf.xacro
fru_bot_description/urdf/mech/: base.urdf.xacro  caster_wheel.urdf.xacro  wheel.urdf.xacro
fru_bot_gazebo/: CMakeLists.txt  package.xml
fru_bot_gazebo/launch/: gazebo.launch.py  gazebo_default.launch.py
fru_bot_gazebo/rviz/: view_urdf.rviz
fru_bot_navigation/: CMakeLists.txt  package.xml
fru_bot_navigation/config/: navigation.yaml  slam.yaml
fru_bot_navigation/launch/: navigation.launch.py  slam.launch.py
fru_bot_navigation/maps/: playground_demo.yaml
fru_bot_navigation/rviz/: fru_bot_nav2_namespaced.rviz
linorobot2_base/config/: ekf.yaml  ekf_a0.yaml  ekf_a1.yaml
linorobot2_bringup/launch/: bringup_FRU.launch.py  bringup_agent2.launch.py  bringup_multi.launch.py
linorobot2_description/: CMakeLists.txt
linorobot2_description/launch/: description.launch.py
linorobot2_description/urdf/: 2wd_properties.urdf.xacro
linorobot2_gazebo/launch/: gazebo.launch.py
linorobot2_navigation/config/: slam.yaml
linorobot2_navigation/maps/: playground_demo.pgm
(+15 files in other folders)
